--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^7.5.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
