--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
@@ -18,6 +19,7 @@
     "sass": "^1.68.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
